Changes in VendorLicense and auto-populating vendor New files added - [securityService.properties,deployment.properties] Files modified - [FormCategoryMappingController.java,VendorUsersController.java,CXGlobalSettings.variables.json,HolidaysController.java,ManageGISData.variables.json,ManualFeeTypesController.java,VendorLicenseTypesController.java,McnewElectricConnectionController.java,MunicipalityUsers.variables.json,UsersController.java,general-options.json,project-security.xml,.wmproject.properties,VendorApplication.variables.json,ManualFeeTypes.variables.json,SFNewResidentialStructure.variables.json,DataEntry.variables.json,SFNewElectricConnection.variables.json,PudapplicationController.java,.gitignore,ManageMunicipalityVendors.variables.json,en.json,SfnewElectricConnectionController.java,EditForm.variables.json,FormTypesController.java,SubdivisionsController.java,MunicipalitySettings.variables.json,VendorController.java,VendorApprovalsController.java,MunicipalityGroupMembersController.java,UserSubscriptionsController.java,web.xml,StatesController.java,DevFormDataEntry.variables.json,GisrecordsController.java,ManageUsers.variables.json,ContractorTypesController.java,CompanyUsers.variables.json,UserPasswordResetTokensController.java,RolesController.java,MunicipalityGroupsController.java,McnewResidentialStructureController.java,GlobalSettingsController.java,MunicipalitiesController.java,.wmproject.properties,FormFeeController.java,SfnewResidentialStructureController.java,NewForm.variables.json,ManageForms.variables.json,FormStatusesController.java,ManageSubscriptions.variables.json,MasterFormsController.java,MCNewElectricConnection.variables.json,CompanyMunicipalities.variables.json,MyProfile.variables.json,WorkSchedule.variables.json,ManageMunicipalities.variables.json,PUDApplication.variables.json,VendorAdminsController.java,Main.variables.json,ManageMuncipalityGroups.variables.json,FormCategoriesController.java,UserCreation.variables.json,VendorLicensesControll

--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -169,7 +169,7 @@
                                                 <wm-form-field name="scope" displayname="Scope" show="true" primary-key="false" generator="assigned" key="scope" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn33">
-                                                <wm-form-field name="vendor" displayname="Vendor" show="true" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" required="required" widget="select" placeholder="Select value"
+                                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" required="required" widget="select" placeholder="Select value"
                                                 defaultvalue="bind:Variables.CurrentVendorObj.firstRecord" dataset="bind:Variables.CurrentVendorObj.dataSet" datafield="All Fields" displayfield="companyName" orderby="companyName:desc"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
