SortOder Changes Files modified - [EditForm.html,EditForm.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -153,7 +153,7 @@
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn49">
                                                                 <wm-form-field name="sortOrder" displayname="Sort Order" show="true" primary-key="false" generator="assigned" key="sortOrder" type="long" step="0" widget="select" placeholder="Enter value" dataset="bind:Variables.SortOrder.dataSet"
-                                                                datafield="dataValue" displayfield="dataValue" orderby="dataValue:asc"></wm-form-field>
+                                                                datafield="dataValue" displayfield="dataValue" orderby="dataValue:asc" defaultvalue="1"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow129_1">
