Form Category Management Change According to updated mock Files modified - [EditForm.js,EditForm.html,NewForm.html,EditForm.variables.json]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -38,7 +38,7 @@
         </wm-gridrow>
         <wm-gridrow name="gridrow5">
             <wm-gridcolumn columnwidth="12" name="gridcolumn7" horizontalalign="center">
-                <wm-button class="btn-raised btn-error btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0"
+                <wm-button class="btn-raised btn-fab btn-primary" caption="" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0"
                 iconclass="wi wi-add"></wm-button>
             </wm-gridcolumn>
         </wm-gridrow>
