--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -268,43 +268,41 @@
                             <wm-tabpane name="tabpaneCATEGORIES" title="Categories">
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow26">
-                                        <wm-gridcolumn columnwidth="6" name="gridcolumn53" padding="unset unset unset 1em">
-                                            <wm-search name="searchCategory" placeholder="Search Category" dataset="bind:Variables.Categories.dataSet" searchkey="category" displaylabel="category" datafield="All Fields"></wm-search>
-                                        </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="6" name="gridcolumn54">
-                                            <wm-button class="btn-default" caption="Add" type="button" margin="unset 0.5em unset 1em" name="buttonAdd" iconclass="wi wi-plus" on-click="buttonAddClick($event, $scope)"></wm-button>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow27">
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn55"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="8" name="gridcolumn56">
-                                            <wm-panel iconclass="wi wi-class" name="panel7" title="Categories" margin="1em unset">
-                                                <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.CategoriesList.dataSet" navigation="None" name="livelist1"
-                                                nodatamessage="No Categories found">
-                                                    <wm-listtemplate layout="inline" name="listtemplate1">
-                                                        <wm-layoutgrid name="layoutgrid7">
-                                                            <wm-gridrow name="gridrow28">
-                                                                <wm-gridcolumn columnwidth="2" name="gridcolumn62"></wm-gridcolumn>
-                                                                <wm-gridcolumn columnwidth="4" name="gridcolumn58">
-                                                                    <wm-label padding="unset 0.5em" name="label2" caption="bind:Variables.CategoriesList.dataSet[$i].category"></wm-label>
-                                                                </wm-gridcolumn>
-                                                                <wm-gridcolumn columnwidth="4" name="gridcolumn59">
-                                                                    <wm-button class="btn-default btn-primary" caption="Delete" type="button" margin="unset 0.5em" name="buttonRemove" iconclass="wi wi-delete" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
-                                                                </wm-gridcolumn>
-                                                                <wm-gridcolumn columnwidth="2" name="gridcolumn63"></wm-gridcolumn>
-                                                            </wm-gridrow>
-                                                        </wm-layoutgrid>
-                                                    </wm-listtemplate>
-                                                </wm-livelist>
-                                            </wm-panel>
-                                        </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn57"></wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow27_1">
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn59_1"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="8" name="gridcolumn60_1"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn61_1">
-                                            <wm-button class="btn-fab panel-info" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdate" iconclass="wi wi-update" on-click="buttonUpdateClick($event, $scope)"></wm-button>
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn53" padding="unset unset unset 1em">
+                                            <wm-livegrid formlayout="dialog" name="livegrid2">
+                                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="Formcategorymapping List" dataset="bind:Variables.FormCategories.dataSet" navigation="Classic" name="grid2">
+                                                    <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
+                                                    <wm-grid-column binding="formCategories.category" caption="Categories Category" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="FormCategories"
+                                                    readonly="true"></wm-grid-column>
+                                                    <wm-grid-column binding="formCategories.description" caption="Categories Description" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="FormCategories"
+                                                    readonly="true"></wm-grid-column>
+                                                    <wm-grid-column binding="formTypes.formType" caption="Form Type" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="FormTypes" readonly="true"></wm-grid-column>
+                                                    <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
+                                                    <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
+                                                    <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
+                                                </wm-grid>
+                                                <wm-liveform novalidate="false" errormessage="" title="Formcategorymapping Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.FormCategories.dataSet" captionalign="left" captionposition="top"
+                                                name="liveform3">
+                                                    <wm-layoutgrid columns="1" name="layoutgrid9">
+                                                        <wm-gridrow name="gridrow37">
+                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn62">
+                                                                <wm-form-field name="formCategories" displayname="Form Categories" required="false" show="true" generator="assigned" primary-key="false" key="formCategories" type="list" is-related="true" pc-display="true"
+                                                                mobile-display="true" widget="select" dataset="bind:Variables.Categories.dataSet" datafield="All Fields" displayfield="category" defaultvalue="bind:Variables.Categories.firstRecord"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                        </wm-gridrow>
+                                                        <wm-gridrow name="gridrow38">
+                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn63">
+                                                                <wm-form-field name="formTypes" displayname="Form Types" required="false" show="false" generator="assigned" primary-key="false" key="formTypes" type="list" is-related="true" pc-display="true"
+                                                                mobile-display="true" widget="select" defaultvalue="bind:Variables.CurrentFormObj.firstRecord"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                        </wm-gridrow>
+                                                    </wm-layoutgrid>
+                                                    <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true"
+                                                    widget="number"></wm-form-field>
+                                                    <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                                    <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                                </wm-liveform>
+                                            </wm-livegrid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
