--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -112,7 +112,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22">
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" required="required" widget="date" placeholder="Select date"
-                                        outputformat="yyyy-MM-dd" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'" validationmessage="Insurance Expiration Date is required"></wm-form-field>
+                                        outputformat="yyyy-MM-dd" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'" validationmessage="Insurance Expiration Date is required" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21">
                                         <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255" required="true" validationmessage="Certificate of Insurance is required"></wm-form-field>
@@ -120,7 +120,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow8">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn20">
-                                        <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                        <wm-form-field name="lastUpdated" displayname="Last Updated" show="true" primary-key="false" generator="assigned" key="lastUpdated" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date" outputformat="yyyy-MM-dd"
+                                        readonly="true" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
