--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -30,14 +30,15 @@
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="1em unset 2em unset">
                                         <wm-grid title="" dataset="bind:Variables.ExecuteGetFormsForMunicpality.dataSet" navigation="Classic" name="gridFormTypes" filtermode="multicolumn">
-                                            <wm-grid-column binding="ID" caption="Id" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
-                                            <wm-grid-column binding="FormType" caption="Form Type" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
-                                            <wm-grid-column binding="CreatedDate" caption="Created Date" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
-                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                            <wm-grid-column binding="ID" caption="Id" type="string" readonly="true" show="true"></wm-grid-column>
+                                            <wm-grid-column binding="FormType" caption="Form Type" type="string" readonly="true" show="true"></wm-grid-column>
+                                            <wm-grid-column binding="CreatedDate" caption="Created Date" type="string" readonly="true" show="true"></wm-grid-column>
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                             <wm-grid-action key="customButton" display-name="New Form" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Form" action="Widgets.dialogCreateForm.open()" accessroles="CXAdmin"
                                             shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-edit" title="Edit" action="Variables.goToPage_EditForm.invoke()" disabled="false"></wm-grid-row-action>
-                                            <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteFormType.invoke()" disabled="false"></wm-grid-row-action>
+                                            <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.DeleteFormType.invoke()" accessroles="CXAdmin"
+                                            disabled="false"></wm-grid-row-action>
                                         </wm-grid>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
